--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -21,6 +21,13 @@ ul {
 	}
 }
 
+.pagination {
+	li {
+		display: inline-block;
+		margin: 0 2px;
+	}
+}
+
 .page-header {
 	margin: 30px 0 20px;
 	border-bottom: 4px solid #eeeeee;
@@ -35,6 +42,26 @@ ul {
 				color: #23527c;
 				font-weight: bold;
 				font-size: 16px;
+			}
+		}
+	}
+}
+
+.repository-list {
+	.list-body {
+		.list-body-item {
+			border:1px solid #eee;
+			padding: 20px 20px 5px;
+			border-radius: 10px;
+			margin-bottom: 20px;
+			.description {
+				height: 40px;
+				overflow: hidden;
+			}
+			.link a {
+				font-size: 16px;
+				font-weight: bold;
+				color: #23527c;
 			}
 		}
 	}
